package Util.UserComunicator;

public class Sms {
    public static void sendSms(String destination, String content) {

    }
}
