@startuml

title __CHAT APP Class Diagram__\n

    class UserAPIworker {
        + doGet()
        + doPost()
    }
    class MessageAPIworker {
        + doGet()
        + doPost()
    }
    namespace Util {
      class Util.Generator {
          {static} + sessionId()
      }
      namespace UserComunicator {
        class Util.UserComunicator.Mail {
            {static} + sendMail()
        }
        class Util.UserComunicator.Sms {
                    {static} + sendSms()
        }
      } 
      namespace Database {
        class Util.Database.Connector {
            ~ con : Connection
            + Connector()
            + Connector()
            + close()
            + insert()
            + query()
        }
      }
    }
    namespace Frontend {
      class Frontend.Login {
          + doGet()
          + doPost()
      }
    }
    namespace MessageAPI {
      class MessageAPI.Message {
          ~ sendTime : String
          ~ text : String
          + Message()
          + Message()
          + toJSON()
      }
      class MessageAPI.MessageManagement {
          {static} + read()
          {static} + send()
      }
    }
    namespace UserAPI {
      class UserAPI.User {
          ~ email : String
          ~ id : int
          ~ name : String
          ~ password : String
          ~ pp_id : int
          ~ surname : String
          + User()
          + User()
          + User()
          + toJSON()
      }
      class UserAPI.UserManagement {
          {static} ~ dbaddress : String
          {static} ~ dbname : String
          {static} ~ dbpass : String
          {static} ~ dbuser : String
          {static} + create()
          {static} + getUser()
          {static} + login()
          {static} + logout()
      }
    }
  MessageAPI.Message o-- UserAPI.User : from
  MessageAPI.Message o-- UserAPI.User : to
  MessageAPIworker -up-|> javax.servlet.http.HttpServlet
  UserAPIworker -up-|> javax.servlet.http.HttpServlet
  Frontend.Login -up-|> javax.servlet.http.HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
